2012-01-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Navigation Search is fixed for multi-level menus.


2012-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * More fixes for navigation markers when going
          backwards in multi-level menus.


2012-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Fixed navigation markers when going backwards in
          multi-level menus.


2012-01-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Fixed navigation when going backwards in multi-level
          menus.


2011-12-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Fix for FullAuto - added more constants to Export.


2011-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Fix for FullAuto - check user when SSH connection
          detected.


2011-10-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Fix for FullAuto.


2011-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Fix for FullAuto.


2011-09-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.0 released. Ran out numbers and didn't
          want to go deeper past the decimal. FullAuto is VERY
          close to it's 1.0 release, so pusing Term::Menus to
          2.0 now makes sense. The "fanfare" will be saved for
          the 1.0 release of Net::FullAuto.

        * Fixed a bug in module selection for FullAuto.


2011-09-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.99 released.

        * Improved Error Message Line number reporting.


2011-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.98 released.

        * Fixed code to complement FullAuto -
          default set and other defaults.

        * Eliminated need for Module::Load::Conditional

        * Updated License to GPL 3.0:
          http://opensource.org/licenses/gpl-3.0.html

